--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.shlifedev.ugs": "https://github.com/shlifedev/uni-google-sheets.git?path=src/",
     "com.unity.addressables": "1.21.21",
     "com.unity.collab-proxy": "2.7.1",
