--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.h8man.2d.navmeshplus": "https://github.com/h8man/NavMeshPlus.git#master",
     "com.shlifedev.ugs": "https://github.com/shlifedev/uni-google-sheets.git?path=src/",
     "com.unity.addressables": "1.21.21",
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.27",
