--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.meta text eol=lf
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_8_0.bundle filter=lfs diff=lfs merge=lfs -text
+Assets/Firebase/Plugins/x86_64/FirebaseCppApp-12_8_0.so filter=lfs diff=lfs merge=lfs -text
